# z7scan

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html  package.json  tsconfig.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ScanCard.tsx
tests/: conftest.py  test_helpers.py  test_models.py  test_scanner.py  test_scorer.py  test_signals.py
z7scan/: __init__.py  models.py  scanner.py  scorer.py  signals.py
z7scan/utils/: helpers.py
